Overleaf POC is now through JS.

--- a/src/assets/tex/main.tex
+++ b/src/assets/tex/main.tex
@@ -1,7 +1,8 @@
-\documentclass[a4paper, titlepage]{blad2}
+\documentclass[a4paper, titlepage]{blad}
 \usepackage{amsmath,amsfonts,amssymb,graphicx}
 \usepackage[T1]{fontenc}
 
+\usepackage{svg}
 %\usepackage{moreverb}
 %\usepackage{xspace}
 %\usepackage{float}
@@ -14,7 +15,8 @@
 
 % Titel, författare etc.
 \title{Sångblad}
-\author{\includegraphics[width=.8\textwidth]{logga}}
+\author{\includesvg[width=.8\textwidth]{logga}}
+%\author{\includegraphics[width=.8\textwidth]{logga}} % Om du använder något annat än en svg-fil.
 %\date{}                          %Ta bort kommentaren om du inte vill ha med datum.
 
 \begin{document}
