--- a/public/tex/main.tex
+++ b/public/tex/main.tex
@@ -1,8 +1,6 @@
+% Currently only used as a template. This is now generated in export.ts
 \documentclass[a4paper, titlepage]{blad}
-\usepackage{amsmath,amsfonts,amssymb,graphicx}
-\usepackage[T1]{fontenc}
 
-\usepackage{svg}
 %\usepackage{moreverb}
 %\usepackage{xspace}
 %\usepackage{float}
