--- a/public/tex/blad.cls
+++ b/public/tex/blad.cls
@@ -8,7 +8,7 @@
 
 \NeedsTeXFormat{LaTeX2e}
 
-\ProvidesClass{blad}[2021/09/05 Sångbladsklass]
+\ProvidesClass{blad}[2021/11/12 Sångbladsklass]
 
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{article}}
 
@@ -36,24 +36,29 @@
 
 % LaTeX automatically adds 1in of offset margin. This resets that.
 \setlength{\hoffset}{-1in}
-\setlength{\topmargin}{5mm}
+\setlength{\voffset}{-1in}
+
+% Misc. resets
 \setlength{\headsep}{0in}
 \setlength{\headheight}{0in}
-
-% Prevent -1in offset for second page.
-\setlength{\oddsidemargin}{1in} 
-\setlength{\evensidemargin}{6mm}
-
-\setlength{\voffset}{-1in}
 \setlength{\lineskip}{0pt}
 \setlength{\parindent}{0pt}
 \setlength{\marginparwidth}{0pt}
 \setlength{\marginparsep}{0pt}
 
+% Even sides end up on the left, hence we want 6mm margin here.
+% The right (even) side margin is computed from the edge of the left subpage, but since we have set
+% hoffset to -1in, we need to undo this overlap by setting oddsidemargin to 1in.
+% We don't add 6mm to oddsidemargin, since the position is computed relative to the left subpage,
+% which is already offset by 6mm.
+\setlength{\oddsidemargin}{1in} 
+\setlength{\evensidemargin}{6mm}
+\setlength{\topmargin}{5mm}
+
 \setlength{\paperwidth}{.5\paperwidth}
 
-\setlength{\textwidth}{.96\paperwidth} %0.96
-\setlength{\textheight}{.95\paperheight} %0.95
+\setlength{\textwidth}{.96\paperwidth}
+\setlength{\textheight}{.95\paperheight}
 
 %
 % Booklet setup
@@ -86,24 +91,35 @@
 %
 % Special character handling 
 %
-\DeclareUnicodeCharacter{03A9}{$\Omega$} %Ω
-\DeclareUnicodeCharacter{03B2}{$\beta$} %β
-\DeclareUnicodeCharacter{03B4}{$\delta$} %δ
-\DeclareUnicodeCharacter{03B5}{$\varepsilon$} %ε
-\DeclareUnicodeCharacter{03B6}{$\zeta$} %ζ
-\DeclareUnicodeCharacter{03C0}{$\pi$} %π
-\DeclareUnicodeCharacter{03C1}{$\rho$} %ρ
-\DeclareUnicodeCharacter{03C3}{$\sigma$} %σ
-\DeclareUnicodeCharacter{03C4}{$\tau$} %τ
-\DeclareUnicodeCharacter{03C9}{$\omega$} %ω
-\DeclareUnicodeCharacter{03D5}{$\varphi$} %ϕ
+\DeclareUnicodeCharacter{0394}{$\Delta$} % Δ
+\DeclareUnicodeCharacter{03A9}{$\Omega$} % Ω
+\DeclareUnicodeCharacter{03B2}{$\beta$} % β
+\DeclareUnicodeCharacter{03B4}{$\delta$} % δ
+\DeclareUnicodeCharacter{03B5}{$\varepsilon$} % ε
+\DeclareUnicodeCharacter{03B6}{$\zeta$} % ζ
+\DeclareUnicodeCharacter{03C0}{$\pi$} % π
+\DeclareUnicodeCharacter{03C1}{$\rho$} % ρ
+\DeclareUnicodeCharacter{03C3}{$\sigma$} % σ
+\DeclareUnicodeCharacter{03C4}{$\tau$} % τ
+\DeclareUnicodeCharacter{03C9}{$\omega$} % ω
+\DeclareUnicodeCharacter{03D5}{$\varphi$} % ϕ
+\DeclareUnicodeCharacter{2207}{$\nabla$} % ∇
 
-\DeclareUnicodeCharacter{00B0}{$^\circ$} %°
-\DeclareUnicodeCharacter{00B2}{$^2$} %²
-\DeclareUnicodeCharacter{00B3}{$^3$} %³
-\DeclareUnicodeCharacter{2082}{$_2$} %₂
-\DeclareUnicodeCharacter{2099}{$_n$} %ₙ
+\DeclareUnicodeCharacter{00B0}{$^\circ$} % °
+\DeclareUnicodeCharacter{00B2}{$^2$} % ²
+\DeclareUnicodeCharacter{00B3}{$^3$} % ³
+\DeclareUnicodeCharacter{2082}{$_2$} % ₂
+\DeclareUnicodeCharacter{2099}{$_n$} % ₙ
 
-\DeclareUnicodeCharacter{1E8D}{$\ddot{x}$} %ẍ
-\DeclareUnicodeCharacter{1E8B}{$\dot{x}$} %ẋ
-\DeclareUnicodeCharacter{2205}{$\emptyset$} %∅
+\DeclareUnicodeCharacter{1E8D}{$\ddot{x}$} % ẍ
+\DeclareUnicodeCharacter{1E8B}{$\dot{x}$} % ẋ
+\DeclareUnicodeCharacter{2205}{$\emptyset$} % ∅
+\DeclareUnicodeCharacter{2229}{$\cap$} % ∩
+\DeclareUnicodeCharacter{222A}{$\cup$} % ∪
+\DeclareUnicodeCharacter{222B}{$\int$} % ∫
+\DeclareUnicodeCharacter{22C5}{$\cdot$} % ⋅
+\DeclareUnicodeCharacter{2227}{$\land$} % ∧
+\DeclareUnicodeCharacter{27F8}{$\Leftarrow$} % ⟸
+\DeclareUnicodeCharacter{2202}{$\partial$} % ∂
+\DeclareUnicodeCharacter{2260}{$\neq$} % ≠
+\DeclareUnicodeCharacter{2228}{$\lor$} % ∨
